z-index fixes v2

--- a/src/components/TimeTable/TimeTable.module.css
+++ b/src/components/TimeTable/TimeTable.module.css
@@ -94,7 +94,7 @@
     margin: 0;
     text-align: center;
     font-size: 0.8em;
-    z-index: 10;
+    z-index: 1;
 }
 
 .filter {
@@ -108,6 +108,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 10;
 }
 
 .opened {
@@ -137,6 +138,7 @@
     font-size: 1em;
     margin: 0;
     font-weight: 300;
+    z-index: 10;
 }
 
 .time {
